# genpattern-gimp

./: .gitignore  README.md  requirements.txt
genpattern/: genpattern.py  hooke.py  plugin.py  translatexml.py  ui.glade
genpattern/locale/ru/LC_MESSAGES/: genpattern.mo  genpattern.po
libgenpattern/: .clang-format  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  genpattern.c  genpattern.h  meson.build  vcpkg-configuration.json
libgenpattern/include/: area.h  basic_geometry.h  convex_hull.h  doubly_linked_list.h  genpattern.h  misc.h  polygon_distance.h  translate.h
libgenpattern/libgenpattern/: CMakeLists.txt
libgenpattern/libgenpattern/include/: basic_geometry.h  box.h  convex_area.h  convex_distance.h  convex_hull.h  convex_intersection_area.h  debug.h  doubly_linked_list.h  errors.h  exports.h  fibonacci.h  genpattern.h  hooke.h  misc.h  polygon.h  polygon_translate.h  suitability.h
libgenpattern/libgenpattern/src/: box.c  convex_area.c  convex_distance.c  convex_hull.c  convex_intersection_area.c  debug.c  doubly_linked_list.c  genpattern.c  hooke.c  misc.c  polygon.c  polygon_translate.c  suitability.c
libgenpattern/src/: area.c  basic_geometry.c  convex_hull.c  doubly_linked_list.c  genpattern.c  meson.build  polygon_distance.c  translate.c
